--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- A-Frameを読み込む -->
   <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
@@ -18,9 +19,9 @@
     </a-assets>
 
     <!-- マーカーの.pattファイルを読み込む -->
-    <a-maker type="hidden" url="./assets/pattern-QR_773373.patt">
+    <a-maker type="hidden" url="./assets/pattern-qr.patt">
       <!-- 3Dモデルを呼び出す -->
-      <a-entity glft-model="#bottle"></a-entity>
+      <a-entity gltf-model="#bottle"></a-entity>
     </a-maker>
 
     <!-- カメラを追加 -->
