--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </a-assets>
 
     <!-- マーカーの.pattファイルを読み込む -->
-    <a-maker type="hidden" url="./assets/pattern-qr.patt">
+    <a-maker type="pattern" url="./assets/pattern-marker.patt">
       <!-- 3Dモデルを呼び出す -->
       <a-entity gltf-model="#bottle"></a-entity>
     </a-maker>
