--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     </a-assets>
 
     <!-- マーカーの.pattファイルを読み込む -->
-    <a-maker type="pattern" url="./assets/pattern-marker.patt">
+    <a-marker type="pattern" url="./assets/pattern-marker.patt">
       <!-- 3Dモデルを呼び出す -->
-      <a-entity gltf-model="#bottle"></a-entity>
-    </a-maker>
+      <a-entity gltf-model="#bottle" scale="0.1 0.1 0.1"></a-entity>
+    </a-marker>
 
     <!-- カメラを追加 -->
     <a-entity camera></a-entity>
