--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- マーカーの.pattファイルを読み込む -->
     <a-marker type="pattern" url="./assets/pattern-marker.patt">
       <!-- 3Dモデルを呼び出す -->
-      <a-entity gltf-model="#bottle" scale="0.1 0.1 0.1"></a-entity>
+      <a-entity gltf-model="#bottle" scale="0.1 0.1 0.1" rotation="90 0 0"></a-entity>
     </a-marker>
 
     <!-- カメラを追加 -->
