--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     </a-assets>
 
     <!-- マーカーの.pattファイルを読み込む -->
-    <a-marker type="pattern" url="./assets/pattern-marker.patt">
+    <a-marker type="pattern" url="./assets/pattern-qr.patt">
       <!-- 3Dモデルを呼び出す -->
-      <a-entity gltf-model="#bottle" scale="0.1 0.1 0.1" rotation="90 0 0"></a-entity>
+      <a-entity gltf-model="#bottle" scale="0.1 0.1 0.1" rotation="-45 0 0"></a-entity>
     </a-marker>
 
     <!-- カメラを追加 -->
